# rust_project_template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  clippy.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
